--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -25,10 +25,10 @@ jobs:
     - name: Build documentation
       run: pixi run -e doc build-doc
 
-    - name: Update the main gh-page website
-      if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
-      uses: peaceiris/actions-gh-pages@v4.0.0
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./doc/_build/html
-        commit_message: "[ci skip] ${{ github.event.head_commit.message }}"
+#    - name: Update the main gh-page website
+#      if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+#      uses: peaceiris/actions-gh-pages@v4.0.0
+#      with:
+#        github_token: ${{ secrets.GITHUB_TOKEN }}
+#        publish_dir: ./doc/_build/html
+#        commit_message: "[ci skip] ${{ github.event.head_commit.message }}"
