--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Run tests
         run: pixi run -e ${{ matrix.environment }} test
 
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v4.5.0
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          slug: scikit-learn-contrib/ASKF
+#      - name: Upload coverage reports to Codecov
+#        uses: codecov/codecov-action@v4.5.0
+#        with:
+#          token: ${{ secrets.CODECOV_TOKEN }}
+#          slug: scikit-learn-contrib/ASKF
