--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
   "scikit-learn>=1.4.2",
+  "genosolver>=0.1.0.6"
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
